fix: height overflow

--- a/deslrey-web/src/components/BgSeriesToggle/index.module.scss
+++ b/deslrey-web/src/components/BgSeriesToggle/index.module.scss
@@ -27,7 +27,7 @@
     }
 
     &.active {
-        color: aqua;
+        color: var(--activeColor);
     }
 
     svg {
