--- a/deslrey-web/src/components/Main/index.module.scss
+++ b/deslrey-web/src/components/Main/index.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     min-height: 90%;
     width: 100%;
-    padding: 5% 2%;
+    padding: 0% 2%;
     padding-top: 10%;
     gap: 5%;
 
